# creatorforge

./: .gitignore  DISCLAIMER.md  README.md  demo.py  pyproject.toml
creatorforge/: __init__.py  assets.py  audio.py  audiogen.py  browse.py  calendar.py  camera.py  capabilities.py  captions.py  cli.py  compose.py  engagement.py  formats.py  growth.py  hardware.py  hooks.py  ideas.py  images.py  longform.py  mcp_server.py  pipeline.py  platforms.py  playbook.py  posttypes.py  providers.py  publish.py  record.py  repos.py  research_paper.py  script.py  sound.py  stock.py  styles.py  thumb.py  thumbnails.py  transcribe.py  tts.py  video.py  voice.py  whitepaper.py
demos/: 01_creator_voice_to_post.py  02_agency_full_pipeline.py  03_devrel_repo_launch.py  04_multiplatform_repurpose.py  05_longform_studio.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
examples/sample_corpus/: post1.txt  post2.txt
tests/: test_assets.py  test_demos.py  test_engagement_repos.py  test_generators.py  test_longform.py  test_multimodal.py  test_pipeline_mcp.py  test_platforms_calendar.py  test_posttypes.py  test_record.py  test_voice.py
